@@ -1,6 +1,6 @@
 package net.minecraft.client.gui.screens.inventory;
 
-import java.util.stream.IntStream;
+import java.util.List;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.IMEPreeditOverlay;
@@ -20,42 +20,56 @@ import net.minecraft.util.Util;
 import net.minecraft.world.level.block.SignBlock;
 import net.minecraft.world.level.block.entity.SignBlockEntity;
 import net.minecraft.world.level.block.entity.SignText;
+import net.minecraft.world.level.block.entity.SignTextSlot;
 import net.minecraft.world.level.block.state.properties.WoodType;
 import org.joml.Vector2f;
 import org.joml.Vector3fc;
 import org.jspecify.annotations.Nullable;
 
 public abstract class AbstractSignEditScreen extends Screen {
+   private static final int LINE_COUNT = 4;
    protected final SignBlockEntity sign;
-   private SignText text;
+   private final SignText.Mutable text;
    private final String[] messages;
-   private final boolean isFrontText;
+   private final SignTextSlot slot;
+   private final int textColor;
    protected final WoodType woodType;
    private long cursorBlinkStartTime;
    private int line;
-   private @Nullable TextFieldHelper signField;
+   private final TextFieldHelper signField;
    private @Nullable IMEPreeditOverlay preeditOverlay;
    private final Vector2f cursorPosScratch;
 
-   public AbstractSignEditScreen(final SignBlockEntity sign, final boolean isFrontText, final boolean shouldFilter) {
-      this(sign, isFrontText, shouldFilter, Component.translatable("sign.edit"));
+   public AbstractSignEditScreen(final SignBlockEntity sign, final SignTextSlot slot, final boolean shouldFilter) {
+      this(sign, slot, shouldFilter, Component.translatable("sign.edit"));
    }
 
-   public AbstractSignEditScreen(final SignBlockEntity sign, final boolean isFrontText, final boolean shouldFilter, final Component title) {
+   public AbstractSignEditScreen(final SignBlockEntity sign, final SignTextSlot slot, final boolean shouldFilter, final Component title) {
       super(title);
+      this.text = SignText.EMPTY.asMutable();
+      this.messages = new String[4];
       this.cursorPosScratch = new Vector2f();
       this.sign = sign;
-      this.text = sign.getText(isFrontText);
-      this.isFrontText = isFrontText;
+      SignText currentText = sign.getText(slot);
+      List<Component> currentLines = currentText.getMessages(shouldFilter);
+      this.slot = slot;
       this.woodType = SignBlock.getWoodType(sign.getBlockState().getBlock());
-      this.messages = (String[])IntStream.range(0, 4).mapToObj((index) -> this.text.getMessage(index, shouldFilter)).map(Component::getString).toArray((x$0) -> new String[x$0]);
+      this.textColor = currentText.hasGlowingText() ? currentText.getColor().getTextColor() : AbstractSignRenderer.getDarkColor(currentText);
+      this.text.setColor(currentText.getColor()).setTextGlowing(currentText.hasGlowingText());
+
+      for(int i = 0; i < 4; ++i) {
+         String stringifiedLine = i < currentLines.size() ? ((Component)currentLines.get(i)).getString() : "";
+         this.messages[i] = stringifiedLine;
+         this.text.setLine(i, Component.literal(stringifiedLine));
+      }
+
+      this.signField = new TextFieldHelper(() -> this.messages[this.line], this::setMessage, TextFieldHelper.createClipboardGetter(this.minecraft), TextFieldHelper.createClipboardSetter(this.minecraft), (s) -> this.minecraft.font.width(s) <= sign.getMaxTextLineWidth());
    }
 
    protected void init() {
-      this.minecraft.textInputManager().startTextInput();
+      this.minecraft.textInputManager().startTextInput(this);
       this.cursorBlinkStartTime = Util.getMillis();
-      this.addRenderableWidget(Button.builder(CommonComponents.GUI_DONE, (button) -> this.onDone()).bounds(this.width / 2 - 100, this.height / 4 + 144, 200, 20).build());
-      this.signField = new TextFieldHelper(() -> this.messages[this.line], this::setMessage, TextFieldHelper.createClipboardGetter(this.minecraft), TextFieldHelper.createClipboardSetter(this.minecraft), (s) -> this.minecraft.font.width(s) <= this.sign.getMaxTextLineWidth());
+      this.addRenderableWidget(Button.builder(CommonComponents.GUI_DONE, (var1) -> this.onDone()).bounds(this.width / 2 - 100, this.height / 4 + 144, 200, 20).build());
    }
 
    public void tick() {
@@ -84,7 +98,7 @@ public abstract class AbstractSignEditScreen extends Screen {
    }
 
    public boolean isInputCaptured() {
-      return this.signField != null;
+      return true;
    }
 
    public boolean charTyped(final CharacterEvent event) {
@@ -110,10 +124,10 @@ public abstract class AbstractSignEditScreen extends Screen {
    public void removed() {
       ClientPacketListener connection = this.minecraft.getConnection();
       if (connection != null) {
-         connection.send(new ServerboundSignUpdatePacket(this.sign.getBlockPos(), this.isFrontText, this.messages[0], this.messages[1], this.messages[2], this.messages[3]));
+         connection.send(new ServerboundSignUpdatePacket(this.sign.getBlockPos(), List.of(this.messages), this.slot));
       }
 
-      this.minecraft.textInputManager().stopTextInput();
+      this.minecraft.textInputManager().stopTextInput(this);
    }
 
    public boolean isPauseScreen() {
@@ -143,8 +157,9 @@ public abstract class AbstractSignEditScreen extends Screen {
       this.cursorPosScratch.zero();
       this.extractSignText(graphics, this.cursorPosScratch);
       graphics.pose().popMatrix();
+      this.cursorPosScratch.mul(textScale.x(), textScale.y()).add(offsetX, offsetY);
+      this.minecraft.textInputManager().setTextInputArea((int)this.cursorPosScratch.x, (int)this.cursorPosScratch.y, (int)this.cursorPosScratch.x + 1, (int)this.cursorPosScratch.y + this.sign.getTextLineHeight());
       if (this.preeditOverlay != null) {
-         this.cursorPosScratch.mul(textScale.x(), textScale.y()).add(offsetX, offsetY);
          this.preeditOverlay.updateInputPosition((int)this.cursorPosScratch.x, (int)this.cursorPosScratch.y);
          graphics.setPreeditOverlay(this.preeditOverlay);
       }
@@ -152,9 +167,8 @@ public abstract class AbstractSignEditScreen extends Screen {
    }
 
    private void extractSignText(final GuiGraphicsExtractor graphics, final Vector2f cursorPosOutput) {
-      int color = this.text.hasGlowingText() ? this.text.getColor().getTextColor() : AbstractSignRenderer.getDarkColor(this.text);
       boolean showCursor = TextCursorUtils.isCursorVisible(Util.getMillis() - this.cursorBlinkStartTime);
-      boolean needsValidCursorPos = this.preeditOverlay != null;
+      boolean needsValidCursorPos = true;
       int cursorPos = this.signField.getCursorPos();
       int selectionPos = this.signField.getSelectionPos();
       int signMidpoint = 4 * this.sign.getTextLineHeight() / 2;
@@ -162,35 +176,36 @@ public abstract class AbstractSignEditScreen extends Screen {
 
       for(int i = 0; i < this.messages.length; ++i) {
          String line = this.messages[i];
-         if (line != null) {
-            if (this.font.isBidirectional()) {
-               line = this.font.bidirectionalShaping(line);
+         if (this.font.isBidirectional()) {
+            line = this.font.bidirectionalShaping(line);
+         }
+
+         int x1 = -this.font.width(line) / 2;
+         graphics.text(this.font, line, x1, i * this.sign.getTextLineHeight() - signMidpoint, this.textColor, false);
+         if (i == this.line && cursorPos >= 0) {
+            if (!showCursor) {
             }
 
-            int x1 = -this.font.width(line) / 2;
-            graphics.text(this.font, line, x1, i * this.sign.getTextLineHeight() - signMidpoint, color, false);
-            if (i == this.line && cursorPos >= 0 && (showCursor || needsValidCursorPos)) {
-               int cursorPosition = this.font.width(line.substring(0, Math.max(Math.min(cursorPos, line.length()), 0)));
-               int cursorX = cursorPosition - this.font.width(line) / 2;
-               if (cursorPos >= line.length()) {
-                  if (showCursor) {
-                     TextCursorUtils.extractAppendCursor(graphics, this.font, cursorX, cursorY, color, false);
-                  }
-
-                  cursorPosOutput.set((float)cursorX, (float)cursorY);
+            int cursorPosition = this.font.width(line.substring(0, Math.clamp((long)cursorPos, 0, line.length())));
+            int cursorX = cursorPosition - this.font.width(line) / 2;
+            if (cursorPos >= line.length()) {
+               if (showCursor) {
+                  TextCursorUtils.extractAppendCursor(graphics, this.font, cursorX, cursorY, this.textColor, false);
                }
+
+               cursorPosOutput.set((float)cursorX, (float)cursorY);
             }
          }
       }
 
       for(int i = 0; i < this.messages.length; ++i) {
          String line = this.messages[i];
-         if (line != null && i == this.line && cursorPos >= 0) {
-            int cursorPosition = this.font.width(line.substring(0, Math.max(Math.min(cursorPos, line.length()), 0)));
+         if (i == this.line && cursorPos >= 0) {
+            int cursorPosition = this.font.width(line.substring(0, Math.clamp((long)cursorPos, 0, line.length())));
             int cursorX = cursorPosition - this.font.width(line) / 2;
             if (cursorPos < line.length()) {
                if (showCursor) {
-                  TextCursorUtils.extractInsertCursor(graphics, cursorX, cursorY, ARGB.opaque(color), this.sign.getTextLineHeight());
+                  TextCursorUtils.extractInsertCursor(graphics, cursorX, cursorY, ARGB.opaque(this.textColor), this.sign.getTextLineHeight());
                }
 
                cursorPosOutput.set((float)cursorX, (float)cursorY);
@@ -210,10 +225,14 @@ public abstract class AbstractSignEditScreen extends Screen {
 
    }
 
-   private void setMessage(final String message) {
-      this.messages[this.line] = message;
-      this.text = this.text.setMessage(this.line, Component.literal(message));
-      this.sign.setText(this.text, this.isFrontText);
+   private void setMessage(final String newMessage) {
+      String currentMessage = this.messages[this.line];
+      if (!currentMessage.equals(newMessage)) {
+         this.messages[this.line] = newMessage;
+         this.text.setLine(this.line, Component.literal(newMessage));
+         this.sign.setText(this.text.asImmutable(), this.slot);
+      }
+
    }
 
    private void onDone() {
